fix tags input in WE page too short

--- a/hyphe_frontend/app/app.css
+++ b/hyphe_frontend/app/app.css
@@ -215,6 +215,10 @@ md-list.md-dense md-list-item .md-list-item-inner .md-avatar {
   box-shadow: none;
 }
 
+.md-chip-input-container {
+  width: 100%;
+}
+
 .fix-scroll-glitch {
   background-color: #F00;
 }
